--- a/ImageFeed/build.gradle
+++ b/ImageFeed/build.gradle
@@ -42,4 +42,9 @@ ext {
     gsonVersion = '2.8.0'
     butterknifeVersion = '8.6.0'
     roomVersion = '1.0.0-alpha1'
+
+    junitVersion = '4.12'
+    mockitoVersion = '1.10.19'
+    powerMockito = '1.6.2'
+    hamcrestVersion = '1.3'
 }
